--- a/KnowledgeManager_Details.html
+++ b/KnowledgeManager_Details.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
+<style>
+.outertable {
+font-family: arial, sans-serif;
+border-collapse: collapse;
+width: 100%;
+height:100%;
+}
+
+.outertd, th {
+	border: 2px solid #17202A;
+	text-align: left;
+	
+	padding: 8px;
+	width: 50%
+}
+
+
+.outertd:nth-child(odd) {
+	background-color: #ECF0F1;
+}
+</style>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,17 +48,14 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
+	<script type="text/javascript" src="sessvars.js"></script>
+	
+	<script type="text/javascript" src="/pico/client.js"></script>
+	<script>pico.load('KM_AED_DB')</script>
   
-	  <script type="text/javascript" src="/pico/client.js"></script>
-	  <script>
-		pico.load("QueryKB");
-	  </script>
-	  <script type="text/javascript" src="sessvars.js"></script>
   </head>
-<body>
-  <!-- =========================
-    //////////////This Theme Design and Developed //////////////////////
-    //////////// by www.wpfreeware.com======================--> 
+<body onload="KnowDet()">
+
 
   <!-- Preloader -->
   <div id="preloader">
@@ -64,7 +84,7 @@
           <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
             </ul>
           </li>
           <li><a href="Training.html">Training</a></li>  
@@ -97,70 +117,125 @@
 		  <!-- start slider section -->
 
             <img STYLE="WIDTH:1110px; HEIGHT:400px" src="img/slider/1.jpg" align="middle">
+			<br/><br/>
 			<table width=100% height=100%><tr><td width=50%>
 			<div>
-			<h3><b>Search Panel</b></h3> 
-			<div style = "width:500px;height:220px;border:1px solid #000;">
-			<br>
+			<h3><b>Item Summary</b></h3> 
+			<div style = "width:500px;height:260px;border:1.5px solid #000;">
 			
-			
-			<div>
-				<input style="width:400px;" type="text" id ="searchbox" name = "searchbox" placeholder="Search"/>
-				<input onclick="SearchKP()" type="submit"/><br>
-			</div>
+
+<body>
+
+<table class="outertable">
+  <tr class = "outertr">
+    <td class="outertd">Descriptor</td>
+    <td class="outertd"><a id="t_descriptor">Something here</a></td>
+  </tr>
+  <tr class = "outertr">
+    <td class="outertd">Parent Category</td>
+    <td class="outertd"><a id="t_parent">Something here</a></td>
+  </tr>
+  <tr class = "outertr">
+    <td class="outertd">Status</td>
+    <td class="outertd"><a id="t_stat">Something here</a></td>
+  </tr>
+  <tr class = "outertr"> 
+    <td class="outertd">UID</td>
+    <td class="outertd"><a id="t_UID">Something here</a></td>
+  </tr>
+  <tr class = "outertr">
+    <td class="outertd">Created</td>
+    <td class="outertd"><a id="t_Created">Something here</a></td>
+  </tr>
+  <tr class = "outertr">
+    <td class="outertd">Modified</td>
+    <td class="outertd"><a id="t_Modified">Something here</a></td>
+  </tr>
+</table>
+<h3><b><input type ="submit" value="Add"></b>
+<b><input type ="submit" value="Edit"></b>
+<b><input type ="submit" value="Delete"></b></h3>
+</body>
 		
-			
-			<div class="dropdown">
-			<h5><b>Select your Subject Area<b></h5>
-			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-				Subject Area
-				<span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				<li><a style="cursor:pointer;" onclick="setField(this)">Additive Manufacturing</a></li>
-				<li><a style="cursor:pointer;" onclick="setField(this)">Advanced Materials</a></li>
-				<li><a style="cursor:pointer;" onclick="setField(this)">Digital Manufacturing</a></li>
-				<li><a style="cursor:pointer;" onclick="setField(this)">Robotics and Automation</a></li>
-			  </ul>
-			  <input type="text" id="subarea" style="width:340px;height:33px;" class="field left" value="Subject Area" readonly></input>
-			</div>
-			
-			
-			<div class="dropdown">
-			<h5><b>Select the sub-category<b></h5>
-			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-				Sub-Category
-				<span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				<li><a style="cursor:pointer;" onclick="setField_1(this)">Aerospace</a></li>
-				<li><a style="cursor:pointer;" onclick="setField_1(this)">Biology and Pharmaceuticals</a></li>
-				<li><a style="cursor:pointer;" onclick="setField_1(this)">Chemicals and Engineering</a></li>
-				<li><a style="cursor:pointer;" onclick="setField_1(this)">Electronics</a></li>
-				<li><a style="cursor:pointer;" onclick="setField_1(this)">Machinery and Systems</a></li>
-			  </ul>
-			  <input type="text" id="subcat" style="width:333px;height:33px;" class="field left" value="Sub-Category" readonly></input>
-			</div>
-			
 			</div>
 			</div>
 			</td>
 
 			<td width=50%>
-			<h3><b>Search Results</b></h3> 
-			<div style="position:static;width:600px;height:220px;border:1.5px solid #223;">
+			<h3><b><input type ="submit" value="View Hierarchy"></b></h3>
+			<div style = "width:600px;height:265px;border:1.5px solid #000;">
 			<br>
-			<p id="searchrestitle"><b>Your search results will be populated here<b></p>
-			<p><a id="searchitem1" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem2" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem3" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem4" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			</td></tr></table>
+			<b><p id="searchitem1">&nbsp;</p></b>
+			<p><a id="searchitem2" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
+			<p><a id="searchitem3" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
+			<b><p id="searchitem4">&nbsp;</p></b>
+			<p><a id="searchitem5" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
+			<p><a id="searchitem6" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
+			<p><a id="searchitem7" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
+			<p><a id="searchitem8" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
+			
+			</td></tr></table><br></br>
+            <h3><b>DATA ATTRIBUTES</b></h3> 
+			<div style = "width:1110px;height:600px;border:2px solid #000;">
+			
+<table class = "outertable">
+  <tr style= "height:10%" class = "outertr">
+    <td style= "width:10%" class="outertd"><b>Descriptor</b></td>
+    <td class="outertd"><a id="t2_descriptor">Something here</a></td>
+  </tr>
+  <tr style= "height:10%" class = "outertr">
+    <td style= "width:10%" class="outertd"><b>KnowledgeType</b></td>
+    <td class="outertd"><a id="t2_Knowtype">Something here</a></td>
+  </tr>
+  <tr class = "outertr">
+    <td style= "width:10%" class="outertd"><b>Details</b></td>
+    <td class="outertd"><a id="t2_details">
+	<div style= "height:100%;overflow: auto">
+	<center><img  id="KmDetImg" style="width:600px;height:200px" src="img/KnowledgeHeader.png" align="middle"></center><br>
 
+	<h4><b>Description</b></h4>
+	<p style="text-align:justify" id="para1">
+	The knowledge zone houses knowledge in the form of text, images, videos gathered from various sources such as journals, articles, interviews with experts and so on.
+
+	The panel on the left is a heirarchy of all the knowledge points which are present in this knowledge repository. Clicking on each one will display the content, contained within each of the knowledge point, in this window.
+
+	In case of any issues please get in contact with the support team.
+
+	</p>
+
+	<h4><b>Procedure</b></h4>
+	<p style="text-align:justify" id="para2">
+	The knowledge zone houses knowledge in the form of text, images, videos gathered from various sources such as journals, articles, interviews with experts and so on.
+
+	The panel on the left is a heirarchy of all the knowledge points which are present in this knowledge repository. Clicking on each one will display the content, contained within each of the knowledge point, in this window.
+
+	In case of any issues please get in contact with the support team.
+	
+	</p>
+	
+	</a>
+	</div>
+	</td>
+  </tr>
+  <!-- <tr class = "outertr">
+    <td class="outertd"><b>Procedural</b></td>
+    <td class="outertd"></td>
+  </tr>
+  <tr class = "outertr">
+    <td class="outertd"><b>Causal</b></td>
+    <td class="outertd"></td>
+  </tr> -->
+</table>
+			
+	        </div>
+			<br></br>		
               <!--<a class="read_more" href="#">read more<i class="fa fa-long-arrow-right"></i></a>-->
         </div>
+
       </div>
     </div>
+	</div>
+	
   </section>
   <!-- End Service area -->
 
@@ -175,8 +250,7 @@
     </div>
   </section>
   <!-- End special quote -->
-
-  
+ 
     <!-- start footer -->
   <footer id="footer">
     <div class="container">
@@ -215,7 +289,7 @@
                   <ul>
                     <li><a href="ContactUs.html">Support</a></li>
                     <li><a>Blog</a></li>
-                    <li><a href="ChatUI.html">FAQ</a></li>
+                    <li><a>FAQ</a></li>
                     <li><a href="Testimonials.html">Testimonial Archive</a></li>
                     <li><a>Careers</a></li>
                     <li><a>Developer API</a></li>
@@ -248,16 +322,6 @@
   </footer>
   <!-- End footer -->
   
-  <script>
-  function KnwLmgDetails(DetID)
-  {
-		var curr_val = document.getElementById(DetID).innerHTML
-		sessvars.kpid = curr_val;
-		window.location.href = "KnowledgeManager_Details.html";  
-  }
-
-  </script>
-  
   
   
   <script>
@@ -275,37 +339,61 @@
   </script>
   
   <script>
-  function SearchKP()
+  function KnowDet()
   {
-		document.getElementById("searchitem1").innerHTML = ""
-		document.getElementById("searchitem2").innerHTML = ""
-		document.getElementById("searchitem3").innerHTML = ""
-		document.getElementById("searchitem4").innerHTML = ""
-		
-		var searchq = document.getElementById("searchbox").value
-		
-		if (searchq == null || searchq == "")
-		{
-			alert("Please enter keywords in the search field.")
-			return false;
-		}
-		
-		QueryKB.QuerySearch(searchq,function(response){
-			    for (var i = 1; i < 5; i++) {
-					if (response[response.length - i])
-						document.getElementById("searchitem" + i).innerHTML = response[response.length - i];
+  //alert('Welcome '+sessvars.kpid)
+  var str = sessvars.kpid
+  document.getElementById('t_descriptor').innerHTML = sessvars.kpid;
+  document.getElementById('t2_descriptor').innerHTML = sessvars.kpid;
+  KM_AED_DB.KM_DB(str,function(response){
+			document.getElementById('para1').innerHTML = response[0];
+			document.getElementById('para2').innerHTML = response[1];
+			document.getElementById('KmDetImg').src = response[2];	
+			document.getElementById('t_parent').innerHTML = response[3];
+			document.getElementById('t_stat').innerHTML = response[4];
+			document.getElementById('t_UID').innerHTML = response[5];
+			document.getElementById('t_Created').innerHTML = response[6];
+			document.getElementById('t_Modified').innerHTML = response[7];
+			document.getElementById('t2_Knowtype').innerHTML = response[8];
+					
+		});
+	
+  document.getElementById("searchitem1").innerHTML = " PARENTS";
+  KM_AED_DB.getParents(str,function(response){
+			for (var i = 2; i < 4; i++) {
+					if (response[response.length - i + 1])
+						document.getElementById("searchitem" + i).innerHTML = response[response.length - i + 1];}
 						document.getElementById("searchitem" + i).href = "KnowledgeManager_Details.html";
-				}	
-
-		if (response.length==0)
-		{document.getElementById("searchrestitle").innerHTML = " No results found"}
-		else{
-		document.getElementById("searchrestitle").innerHTML = " The following results have been obtained from the search query:"}
-		});	
+  
+  
+		});
+		
+  document.getElementById("searchitem4").innerHTML = " CHILDREN";
+  KM_AED_DB.getChildren(str,function(response){
+			//alert(response)
+  			for (var i = 5; i < 9; i++) {
+					if (response[response.length - i + 4])
+						document.getElementById("searchitem" + i).innerHTML = response[response.length - i + 4];}
+						document.getElementById("searchitem" + i).href = "KnowledgeManager_Details.html";
+  
+  
+		});
+		
   }
+
   </script>
   
-  
+   <script>
+   
+  function KnwLmgDetails(DetID)
+  {
+		var curr_val = document.getElementById(DetID).innerHTML
+		sessvars.kpid = curr_val;
+		window.location.href = "KnowledgeManager_Details.html";  
+  }
+
+  </script>
+  </script>
   
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
