--- a/HomePage_AfterLogin.html
+++ b/HomePage_AfterLogin.html
@@ -25,25 +25,30 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
- 
+  
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 <body>
+  <!-- =========================
+    //////////////This Theme Design and Developed //////////////////////
+    //////////// by www.wpfreeware.com======================--> 
 
   <!-- Preloader -->
   <div id="preloader">
     <div id="status">&nbsp;</div>
-	
   </div>
  
   <!-- End Preloader -->   
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
   
   <!-- start navbar -->
-  
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  
     <div class="container">
-	<!-- <img src="/img/SMARTLogo.JPG" style="position:fixed;left:0;height:50px;width:50px"></img> -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
@@ -51,11 +56,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-		
         <a class="navbar-brand">SMART <span>Structuring Manufacturing Architecture for Robotic Technologies</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
-	  
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
         <ul class="nav navbar-nav navbar-right custom_nav">
           <li class="active"><a href="HomePage.html">Home</a></li>
